# swasthya_pratham

./: .env  .gitignore  next.config.mjs  package-lock.json  package.json
backend/: Cargo.toml
backend/src/: main.rs
llm/: index.py
llm/faiss_index/: index.faiss  index.pkl
src/: demo.txt  middleware.ts
src/actions/: ai.ts  index.ts
src/app/: layout.tsx  page.tsx
src/app/(dashboard)/dashboard/: layout.tsx  page.tsx
src/app/(dashboard)/dashboard/analyze/: page.tsx
src/app/(dashboard)/dashboard/kanban/: page.tsx
src/app/(dashboard)/dashboard/project/: page.tsx
src/app/(dashboard)/dashboard/project/new/: page.tsx
src/app/login/: page.tsx
src/app/register/: page.tsx
src/components/: Header.tsx  Hero.tsx  ai.tsx  dashboard-nav.tsx  iconss.tsx  project-uploader.tsx
src/components/charts/: area-graph.tsx
src/components/forms/: user-auth-form.tsx
src/components/layout/: sidebar.tsx
src/constants/: data.ts
