[package]
name = "rust_mongodb_auth"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
mongodb = "2.1"
bson = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-cors = "0.6.0"
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
futures = "0.3"